--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <title>IOET EXERCISE</title>
-        <script type="text/javascript" src="table.js"></script>
-        <script type="text/javascript" src="main.js"></script>
+        <script type="module" src="table.js"></script>
+        <script type="module" src="find.js"></script>
+        <script type="module" src="calculatedayvalue.js"></script>
+        <script type="module" src="main.js"></script>
     </head>
     <body>
         <input id='file' type="file" id="file-selector" accept=".txt"></input>
