--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <title>IOET EXERCISE</title>
-        <script type="module" src="table.js"></script>
-        <script type="module" src="find.js"></script>
-        <script type="module" src="calculatedayvalue.js"></script>
-        <script type="module" src="main.js"></script>
+        <script type="module" src="./modules/table.js"></script>
+        <script type="module" src="./modules/find.js"></script>
+        <script type="module" src="./modules/calculatedayvalue.js"></script>
+        <script type="module" src="./modules/payment.js"></script>
+        <script type="module" src="./modules/main.js"></script>
     </head>
     <body>
         <input id='file' type="file" id="file-selector" accept=".txt"></input>
